--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcsh 'Great Britain -- Social life and customs -- 19th century -- Fiction'
 - !lcsh 'Young men -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'Kipps: The Story of a Simple Soul'
 url: http://www.gutenberg.org/ebooks/39162
 wikipedia:
